@@ -43,6 +43,8 @@ Version 1.3.11:
    * The attack dialog displays the range between weapon's info.
    * The footsteps of a teleporting unit shows haloes on teleport points.
    * Tips of the day have attributions, a "Previous" button and a fixed size.
+   * Savegames now have a prefix indicating the campaign they are from if
+     the campaign WML declared an abbrev= tag.
 
 Version 1.3.10:
   * Campaigns
