@@ -21,6 +21,9 @@ Version 1.3.11+svn:
    * the preprocessor now ignores filenames with '..' in them
  * miscellaneous and bug fixes:
    * fix a compilation bug on Windows (usleep not defined)
+ * UI:
+   * Savegames now have a prefix indicating the campaign they are from if
+     the campaign WML declared an abbrev= tag.
 
 Version 1.3.11:
  * campaigns
